Corrigindo logout
